core/stdlib/tests/ui/model_invalid_union.stderr
error: Wrapper derive is not supported for unions
 --> tests/ui/model_invalid_union.rs:4:7
  |
4 | union Invalid {
  |       ^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/model_invalid_union.rs:6:2
  |
6 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/model_invalid_union.rs`
