core/stdlib/tests/ui/model_invalid_union.rs
use stdlib::Model;

#[derive(Model)]
union Invalid {
    x: u64,
}
